Add raytracer module with BVH, CLI integration, and animated scene rotation; update docs and CI
- Introduced `raytracer.rs` module implementing a software ray tracer:
  - Includes BVH (Bounding Volume Hierarchy) construction and update methods
  - Separates BVH traversal and ray-triangle intersection logic
  - Provides a `render_raytraced_scene` function that outputs a framebuffer compatible with the SDL2 viewer
  - Supports scene rotation animation via a rotation angle argument

- Updated CLI (`main.rs`) to support a `--raytracer` flag for selecting between rasterization and ray tracing
  - Raytracer mode now accepts a rotation angle for animation (static by default, can be animated in a loop)
  - Added clear help and usage instructions

- Added `show_sdl2_framebuffer` to the viewer for displaying arbitrary framebuffers (used by raytracer)

- Refactored and improved code:
  - Fixed type mismatches, division errors, and unused variable warnings
  - Derived `Clone` for all scene structs to support animated transforms in raytracer
  - Improved modularity and documentation throughout the codebase

- Updated README.md:
  - Added a detailed changelog and clarified all sections to reflect new raytracer features, animation, and CLI usage
  - Provided example code for animating the raytraced scene
  - Updated project structure and feature list

- Added/updated GitHub Actions CI workflow for macOS, using latest artifact upload action

This commit brings robust raytracing support, improved documentation, and a more flexible, user-friendly CLI to the project.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "world_viewer"
 version = "0.1.0"
 edition = "2021"
-authors = ["Nilanjan Goswami <one0blue@gmail.com>"]
+authors = ["Nilanjan Goswami <nilanjan.goswami@gmail.com>"]
 rust-version = "1.62"
 description = "A 3D world viewer using Rust"
 homepage = "https://github.com/nilanjan/world_viewer"
